# swagger/spring-server/src/main/java/ch/heig/amt/api/endpoints/BadgesApiController.java
@@ -11,6 +11,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 
 import java.util.List;
 
@@ -27,7 +28,7 @@ public class BadgesApiController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<Void> badgesDelete(String xGamificationToken, String name) {
+    public ResponseEntity<Void> badgesDelete(@RequestHeader(value="X-Gamification-Token", required = true) String xGamificationToken, String name) {
 
         // Check auth is allowed to post event
         ApplicationEntity applicationEntity = this.applicationRepository.findByToken(xGamificationToken);
@@ -43,7 +44,7 @@ public class BadgesApiController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<List<BadgeDTO>> badgesGet(String xGamificationToken) {
+    public ResponseEntity<List<BadgeDTO>> badgesGet(@RequestHeader(value="X-Gamification-Token", required = true) String xGamificationToken) {
 
         // Check user is allowed to post event
         ApplicationEntity applicationEntity = this.applicationRepository.findByToken(xGamificationToken);
@@ -62,7 +63,7 @@ public class BadgesApiController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<Void> badgesPost(String xGamificationToken, @RequestBody BadgeDTO body) {
+    public ResponseEntity<Void> badgesPost(@RequestHeader(value="X-Gamification-Token", required = true) String xGamificationToken, @RequestBody BadgeDTO body) {
 
         // Check user is allowed to post event
         ApplicationEntity applicationEntity = this.applicationRepository.findByToken(xGamificationToken);
